--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Belajar Git project - 1</title>
 </head>
 <body>
-    
+    <p>Hallo Semua Saya sedang belajar Git</p>
 </body>
 </html>
